fix first table column visibility on small screens

--- a/assets/_basic.sass
+++ b/assets/_basic.sass
@@ -1,3 +1,6 @@
+*
+    box-sizing: border-box
+
 body
     display: flex
     flex-direction: column
